# sylpheed-chkarchpasswd

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.en.txt  README.ja.txt  build.sh  chkarchpasswd.c  chkarchpasswdrc  compose.c  configure.ac  offline.xpm  online.xpm  test7zip32.c  testgscanner.c  testunlha32.c  testunzip32.c  version.rc
examples/: testunzip32.c
po/: chkarchpasswd.pot  ja.po
res/: key_add.xpm  key_delete.xpm  version.rc
src/: Makefile.am  chkarchpasswd.c
